Banner & Brand Styling (w/ images)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="shortcut icon" href="Hexareactor.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./Resources/Images/Hexareactor.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="styles.css">
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="content">
-      <a href="index.html" class="logo"><img src="Hexareactor.png"><span>Reactor Builds</span></a>
+      <a href="index.html" class="logo"><img src="./Resources/Images/Hexareactor.png"><span>Reactor Builds</span></a>
       <nav class="desktop">
         <ul>
           <li><a href="#products">Products</a></li>
@@ -55,12 +55,13 @@
       <div id="stock-section">
         <h3>Fully Stocked With Elite Manufacturing</h3>
         <div id="brands">
-          <div class="brand-logo"><img src="" alt="MSI"></div>
-          <div class="brand-logo"><img src="" alt="GIGABYTE"></div>
-          <div class="brand-logo"><img src="" alt="ASUS"></div>
-          <div class="brand-logo"><img src="" alt="NZXT"></div>
-          <div class="brand-logo"><img src="" alt="Western Digital"></div>
-          <div class="brand-logo"><img src="" alt="Corsair"></div>
+          <div class="brand-logo"><img src="./Resources/Images/CorsairLogo.png" alt="Corsair"></div>
+          <div class="brand-logo"><img src="./Resources/Images/MSI-Logo.png" alt="MSI"></div>
+          <div class="brand-logo"><img src="./Resources/Images/Gigabyte-Logo.png" alt="GIGABYTE"></div>
+          <div class="brand-logo"><img src="./Resources/Images/ASUS-Logo.png" alt="ASUS"></div>
+          <div class="brand-logo"><img src="./Resources/Images/NZXT-Logo.avif" alt="NZXT"></div>
+          <div class="brand-logo"><img src="./Resources/Images/WD-Logo.png" alt="Western Digital"></div>
+          
           <span>Choose parts from your favorite brand, or mix and match!</span>
         </div>
       </div>
